Fix bug 72038 "FTP listings never stop loading on Mac", by sfraser and gordon. r= dougt, sr=scc.